<resources>
    <string name="app_name">Story App</string>
    <string name="name">Name</string>
    <string name="date">Uploaded on %1s</string>
    <string name="error">Can\'t load data</string>
    <string name="copyright">© 2022 Tio Ramadhan</string>
    <string name="title_login_page">Login first</string>
    <string name="message_login_page">With this we know who you are</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Register</string>
    <string name="title_signup_page">Do not know, then do not love</string>
    <string name="error_login">There is an error</string>
    <string name="logout">Exit</string>
    <string name="add_story">Add story</string>
    <string name="description">Add Description</string>
    <string name="camera">camera</string>
    <string name="upload">Upload</string>
    <string name="galery">Gallery</string>
    <string name="languange">Change language</string>
    <string name="hint_name">Enter your name</string>
    <string name="detail_story">Story detail</string>
    <string name="passwrod_error_msg">Password minimum 6 characters</string>
    <string name="email_error_msg">Incorrect email format</string>
    <string name="email_hint">Enter your email</string>
    <string name="password_hint">Enter yout password</string>
    <string name="login_error_msg">Your email/password is wrong</string>
    <string name="server_error_msg">Server error</string>
    <string name="name_hint">Enter your name</string>
    <string name="email_error_msg2">Email has been used</string>
    <string name="succes_regist_msg">You have successfully registered. Can\'t wait for social assistance, huh?</string>
    <string name="next">Next</string>
    <string name="upload_error">Please enter the image file first</string>
    <string name="description_error">Enter your description</string>
    <string name="upload_succes">Story successfully created</string>
    <string name="permission">Not getting permission</string>
    <string name="choose_photo">Select photo</string>
    <string name="login_success_msg">Login successfully</string>

    <string name="appwidget_text">Story Widget</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="empty_text">Please login first :D</string>
    <string name="configure">Configure</string>
    <string name="retry">Try again</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="maps">Maps</string>
    <string name="not_found">Data not found</string>
    <string name="no_data">Oops.. something went wrong</string>
</resources>