<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.DetailActivity">

        <ImageView
            android:id="@+id/img_photo"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:layout_margin="16dp"
            android:layout_marginTop="256dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <ImageView
            android:id="@+id/img_user_photo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_photo"
            tools:src="@tools:sample/avatars" />



        <TextView
            android:id="@+id/tv_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@+id/img_user_photo"
            app:layout_constraintTop_toTopOf="@+id/img_user_photo"
            android:text="@string/name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tv_name"
            tools:text="@string/date"
            android:textStyle="italic"
            android:textSize="12sp"
            android:id="@+id/tv_date"
            app:layout_constraintStart_toStartOf="@+id/tv_name"/>
        <TextView
            android:id="@+id/tv_description"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginHorizontal="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/img_user_photo"
            android:layout_marginTop="8dp"
            tools:text="@string/description"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>